acronym -> abbreviation; fmt; opinions on having both Abbrevation and Noun headings working this way... <AQL#64012>

--- a/wiki/AQL.wikitext
+++ b/wiki/AQL.wikitext
@@ -1,11 +1,13 @@
-=Acronym=
-Acceptable Quality Level
-
 ==English==
-
-===Entomology===
-
+===Etymology===
 Phrase invented by Philips Semiconductors Technical Documentation Services Department.
 
+===Abbreviation===
+'''AQL'''
+
+# Acceptable Quality Level
+
 ===Noun===
-Defines the lowest level of quality in Technical Documentation which is required to be published.
+'''AQL'''
+
+# Defines the lowest level of quality in Technical Documentation which is required to be published.
