--- a/wiki/undead.wikitext
+++ b/wiki/undead.wikitext
@@ -1,18 +1,16 @@
-=English=
-
-==Adjective==
-'''undead (no comparative or superlative)'''
+==English==
+===Adjective===
+'''undead''' (no comparative or superlative)
 
 # Of a [[corpse]]: having qualities of [[life]]; being [[animate]].
 
-==Noun==
-'''undead ([[collective noun]])'''
+===Noun===
+'''undead''' (''uncountable'')
 
 # ''Usually preceded by "the"'' Those [[creature]] which are [[dead]] yet [[still]] [[moving]].
 #: ''In the [[zombie]] movie, an army of the undead [[accost]]ed some [[nubile]] [[skinny-dip]]ping [[teenager]]s.''
 
-
-===See Also===
+===See also===
 *[[zombie]]
 *[[vampire]]
 *[[mummy]]
