monolingual stuff; before bilingual; fmt <cannibal#50599>

--- a/wiki/cannibal.wikitext
+++ b/wiki/cannibal.wikitext
@@ -1,19 +1,16 @@
-=English=
+==English==
+===Etymology===
+Spanish: Canibalis: the name given by Christopher Columbus to the Caribs of Cuba and Haiti who allegedly ate human flesh.
 
-==Noun==
-[[cannibal]]
+===Noun===
+'''cannibal''' ([[cannibals]])
 
 #An [[organism]] which [[eat]]s others of its own [[species]].
 
-===Translations===
+====Related words====
+*[[cannibalise]]
+*[[cannibalism]]
+
+====Translations====
 *Dutch: [[kannibaal]]
 *Finnish: [[kannibaali]]
-
-===Etymology===
-
-Spanish: Canibalis: the name given by Christopher Columbus to the Caribs of Cuba and Haiti who allegedly ate human flesh.
-
-==Related Words==
-
-*[[cannibalism]]
-*[[cannibalise]]
