fmt; +"integral calculus" to see also; aren't the definitions for the same thing? <differential calculus#64336>

--- a/wiki/differential_calculus.wikitext
+++ b/wiki/differential_calculus.wikitext
@@ -1,18 +1,18 @@
 ==English==
+===Noun phrase===
+'''differential calculus''' (''plural'' '''differential calculi''')
 
-===Noun Phrase===
-'''differential calculus''', ''plural'''''differential calculi'''
+#(''mathematics'') A [[calculus]] handling [[instantaneous]] rates of change.
+#(''mathematics'') The study of instantaneous rates of change.
 
-# (''mathematics'') A [[calculus]] handling instantaneous rates of change.
-# (''mathematics'') The study of instantaneous rates of change.
-
-===Related Terms===
+===Related terms===
 *[[differential]]
 *[[differential equation]]
 *[[differentiate]]
 *[[calculus]]
 
-===See Also===
+===See also===
 *[[derivative]]
+*[[integral calculus]]
 *[[limit]]
 *[[tangent]]
