fmt; isn't there also a noun sense? <elective#49641>

--- a/wiki/elective.wikitext
+++ b/wiki/elective.wikitext
@@ -1,6 +1,10 @@
-=Adjective=
+==English==
+===Adjective===
+'''elective'''
+
 # Optional or open to choice
-==Example==
-He decided to forego elective choose.
-=Related Words=
-[[Elect]]
+#:''He decided to forego elective choose.''
+
+====Related terms====
+*[[elect]]
+*[[election]]
