refers to the events, not the date itself; fmt <9/11#64333>

--- a/wiki/9%2F11.wikitext
+++ b/wiki/9%2F11.wikitext
@@ -1,11 +1,12 @@
 ==Translingual==
 
-# The eleventh day of September, 2001.
+===Etymology===
+From the format used for dates in the [[United States]], which puts the month before the day.
 
-===Usage Note===
+===Noun===
+'''9/11'''
 
-The particular form "9/11" derives from the American habit of writing month first, then day, contrary to most other nations.  Because of the particular significance of 11 September 2001, the notation "9/11" is generally understood to refer to that date.  The usage has been seen even outside the US and in languages other than English.
+#The [[terrorist]] events of 11th September, 2001.
 
-
-===See Also===
-[[w:September 11, 2001 attacks|Wikipedia article on September 11, 2001]]
+===See also===
+[[w:September 11, 2001 attacks|Wikipedia article on 9/11]]
