removed homophone ("ordure"), as it is not; corrected fr: spelling; fmt; more translations <hors-d'œuvre#64331>

--- a/wiki/hors-d%27%C5%93uvre.wikitext
+++ b/wiki/hors-d%27%C5%93uvre.wikitext
@@ -1,10 +1,5 @@
-=French=
-'''hor d'oeuvre'''
+==French==
+===Noun phrase===
+'''hors d'œuvre''' (''plural'' '''hors d'œuvre''')
 
-==Noun==
-
-# [[appetizer]]
-
-
-===Homophone===
-[[ordure]]
+#[[appetizer]]/[[appetiser]], [[starter]], hors d'oeuvre
