+en: entry, with etym & syns; changed redirect to cross-ref <hors d'oeuvre#293771>

--- a/wiki/hors_d%27oeuvre.wikitext
+++ b/wiki/hors_d%27oeuvre.wikitext
@@ -1,1 +1,14 @@
-#REDIRECT [[Hors d'œuvre]]
+==English==
+===Etymology===
+French ''[[hors d'œuvre]]''
+
+===Noun phrase===
+'''hors d'oeuvre''' (''plural'' '''hors d'oeuvre''' ''or'' '''hors d'oeuvres''')
+
+#A small dish eaten before the [[main course]].
+
+====Synonyms====
+*[[appetiser]]/[[appetizer]], [[starter]]
+
+==French==
+''See'' [[hors d'œuvre]]
