+etym <hors-d'œuvre#64331>

--- a/wiki/hors-d%27%C5%93uvre.wikitext
+++ b/wiki/hors-d%27%C5%93uvre.wikitext
@@ -1,4 +1,7 @@
 ==French==
+===Etymology===
+''[[hors]]'', outside, [[d']] of, ''[[œuvre]]'', work, i.e., the main course
+
 ===Noun phrase===
 '''hors d'œuvre''' (''plural'' '''hors d'œuvre''')
 
