--- a/wiki/hors-d%27%C5%93uvre.wikitext
+++ b/wiki/hors-d%27%C5%93uvre.wikitext
@@ -5,4 +5,4 @@
 ===Noun phrase===
 '''hors d'œuvre''' (''plural'' '''hors d'œuvre''')
 
-#[[appetizer]]/[[appetiser]], [[starter]], hors d'oeuvre
+#[[appetizer]]/[[appetiser]], [[starter]], [[hors d'oeuvre]]
