deleted homophone (it is not); fmt <ordure#64330>

--- a/wiki/ordure.wikitext
+++ b/wiki/ordure.wikitext
@@ -1,14 +1,8 @@
-=English=
-'''ordure'''
+==English==
+===Etymology===
+Old French ''ord'', [[filthy]], from Latin ''[[horridus]]'' [[horrid]], + [[-ure]]
 
-==Etymology==
-Old French ''ord'' [[filthy]] < Latin ''[[horridus]]'' [[horrid]] + [[-ure]]
+===Noun===
+'''ordure''' (''[[uncountable]]'')
 
-==Noun==
-
-# [[excrement]], [[dung]], [[shit]]
-
-
-===Homophone===
-
-* [[hor d'oeuvre]]
+#[[excrement]], [[dung]]
