+finite; corrected etym (not Arabic, but from the name of an Arab) <algorithm#64258>

--- a/wiki/algorithm.wikitext
+++ b/wiki/algorithm.wikitext
@@ -1,15 +1,15 @@
 ==English==
-
 ===Etymology===
-Arabic
+A corruption of the name of the Arab mathematician [[w:al-Khwarizmi|al-Khwarizmi]]
 
 ===Noun===
-'''algorithm'''
+'''algorithm''' (''plural'' '''algorithms''')
 
-# A well-defined procedure, independent of any particular computing system.
-#: ''There are several well-known algorithms for multiplying numbers, including the method most of us learned in primary school.''
+#A well-defined procedure containing a finite number of steps describing how to carry out a particular task, independent of any computing system that might do that task.
+#:''There are several well-known algorithms for multiplying numbers, including the method most of us learned in primary school.''
 
-===See Also===
+===See also===
+*[[algorism]]
 *[[data structure]]
 *[[function]]
 *[[program]]
