--- a/wiki/adulteration.wikitext
+++ b/wiki/adulteration.wikitext
@@ -3,4 +3,7 @@
 ==[[Romanica]]==
 ===Noun===
 <b>adulteration</b> ''f''
-#[[adulteration]], [[action of adulterating]]
+# action of adulterating, being [[mix]]ed with [[extraneous]] [[material]], [[illicit]] [[substitution]] of one [[substance]] for another
+
+====Antonyms====
+#[[purification]]
