and english <adulteration#46788>

--- a/wiki/adulteration.wikitext
+++ b/wiki/adulteration.wikitext
@@ -1,6 +1,7 @@
 ----
 
 ==[[Romanica]]==
+==[[English]]==
 ===Noun===
 <b>adulteration</b> ''f''
 # action of adulterating, being [[mix]]ed with [[extraneous]] [[material]], [[illicit]] [[substitution]] of one [[substance]] for another
