antonyms taciturn <loquacious#36327>

--- a/wiki/loquacious.wikitext
+++ b/wiki/loquacious.wikitext
@@ -6,6 +6,9 @@ From Latin ''[[loquax]]'', ''[[loquacis]]''
 ===Adjective===
 #[[talkative]]
 
+====Antonyms====
+#[[taciturn]]
+
 ====Translations====
 *[[German]]: [[gesprächig]], [[redselig]]
 
