Antonyms, ilinks <taciturn#54758>

--- a/wiki/taciturn.wikitext
+++ b/wiki/taciturn.wikitext
@@ -1,11 +1,14 @@
 =={{en}}==
 
 ===Etymology===
-From French ''taciturne'' or Latin ''taciturnus'', from ''tacitus'', silent (see [[tacit]]).
+From [[French]] ''[[taciturne]]'' or [[Latin]] ''[[taciturnus]]'', from ''[[tacitus]]'', [[silent]] (see [[tacit]]).
 
 ===Adjective===
 '''taciturn'''
-#Habitually untalkative, silent
+#[[Habitually]] [[untalkative]], silent
+
+====Antonyms====
+#[[Loquacious]]
 
 ===Derived terms===
 *[[taciturnity]], [[taciturnly]]
