--- a/wiki/loquacious.wikitext
+++ b/wiki/loquacious.wikitext
@@ -4,7 +4,7 @@
 From Latin ''[[loquax]]'', ''[[loquacis]]''
 
 ===Adjective===
-#[[talkative]]
+#[[talkative]],  [[full]] [[of]] [[trivial]] [[conversation]]
 
 ====Antonyms====
 #[[taciturn]]
