--- a/wiki/%E6%AD%8C.wikitext
+++ b/wiki/%E6%AD%8C.wikitext
@@ -39,8 +39,17 @@
 ** '''[[On]]''': [[か]] (ka)
 ** '''[[Kun]]''': [[うたう]] (utau), [[うた]] (uta)
 
-* '''Compounds''':
-** [[歌舞伎]] ([[かぶき]], kabuki): [[kabuki]]
+===Compounds===
+*[[歌曲]]
+*[[歌劇]]
+*[[歌詞]]
+*[[歌手]]
+*[[歌集]]
+*[[歌唱]]
+* [[歌舞伎]] ([[かぶき]], kabuki): [[kabuki]]
+*[[歌謡]]
+*[[歌会]]
+*[[歌枕]]
 
 * '''Other info''':  
 
