--- a/wiki/algorithm.wikitext
+++ b/wiki/algorithm.wikitext
@@ -8,7 +8,22 @@ A corruption of the name of the Arab mathematician [[w:al-Khwarizmi|al-Khwarizmi
 #A well-defined procedure containing a finite number of steps describing how to carry out a particular task, independent of any computing system that might do that task.
 #:''There are several well-known algorithms for multiplying numbers, including the method most of us learned in primary school.''
 
-===See also===
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[algoritmi]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+====See also====
 *[[algorism]]
 *[[data structure]]
 *[[function]]
