--- a/wiki/inveterate.wikitext
+++ b/wiki/inveterate.wikitext
@@ -4,13 +4,16 @@
 
 '''to inveterate'''
 
-#To fix and settle by long continuance.
+#To [[fix]] and [[settle]] by [[long]] [[continuance]].
 
 ===Adjective===
 
 '''inveterate'''
 
-#Old; long-established.
-#Firmly established by long continuance; obstinate; deep-rooted; of long standing; as, an inveterate disease; an inveterate abuse.
-#Having habits fixed by long continuance; confirmed; habitual; as, an inveterate idler or smoker.
-#Malignant; virulent; spiteful.
+#[[Old]]; [[long]]-[[established]].
+#[[Firmly]] [[established]] by long continuance; [[obstinate]]; [[deep]]-[[rooted]]; of long [[standing]]; as, an inveterate [[disease]]; an inveterate [[abuse]].
+#Having [[habits]] fixed by long continuance; [[confirmed]]; [[habitual]]; as, an inveterate [[idler]] or [[smoker]].
+#[[Malignan]]t; [[virulent]]; [[spiteful]].
+
+====Antonyms====
+#[[casual]]
