--- a/wiki/dequeue.wikitext
+++ b/wiki/dequeue.wikitext
@@ -1,17 +1,15 @@
 ==English==
-
 ===Etymology===
-
-Shortened from ''double-ended queue''
+Shortened from '''d'''ouble-'''e'''nded '''[[queue]]'''
 
 ===Noun===
-'''dequeue'''
+'''dequeue''' (''plural'' '''dequeues''')
 
-# (''computing'') A linear [[data structure]] which allows elements to be appended to or removed from either end.
-#: ''This algorithm is difficult to implement with a standard queue, but with a dequeue it's easy.''
+#(''computing'') A linear [[data structure]] in which elements may be appended to or removed from either end.
+#:''This algorithm is difficult to implement with a standard queue, but with a dequeue it's easy.''
 
-===Related Terms===
+===Related terms===
 *[[queue]]
 
-===See Also===
+===See also===
 *[[stack]]
