--- a/wiki/undermine.wikitext
+++ b/wiki/undermine.wikitext
@@ -1,2 +1,9 @@
+==English==
 ===Verb===
-'''to undermine''' ([[undermined]], undermined)
+'''to undermine''' 
+#[[hinder]], [[sabotage]]
+#[[dig]], [[tunnel]], [[hollow out]] as if making a [[cave]] or [[opening]]
+====Antonyms====
+#[[undergird]]
+===Derived words===
+[[undermined]]
