--- a/wiki/ADA.wikitext
+++ b/wiki/ADA.wikitext
@@ -1,47 +1,9 @@
-==English==
-===Proper noun===
-'''Ada'''
+===Abbreviation===<!-- sure this is not an acronym? -->
+'''ADA'''
 
-# A female [[given name]].
-# A programming language.
+# American Dental Association
+# Americans for Democratic Action - ''liberal pressure group''
 
 ===See also===
-*[[ADA]]
-*[[w:Ada_programming_language|Wikipedia article on the programming language Ada]]
-*[http://en.wikibooks.org/wiki/Programming:Ada Wikibook "Programming:Ada"]
-
-----
-
-==Balinese==
-===part of speech?===
-'''ada'''
-
-# there is/are
-
-----
-==Indonesian==
-===part of speech?===
-'''ada'''
-
-# there is/are
-
-===Transitive verb===
-# to have, to own
-
-====Derived terms====
-*[[adalah]] <!-- is, am, are -->
-*[[berada]] <!-- # to be (in a place) # well-off #''[[Dia]] '''berada''' [[di]] Surabaya'' - He is in Surabaya. -->
-
-===Intransitive verb===
-# to be present, to be there
-
-----
-==Swedish==
-# A woman's name, quite rare.
-
-----
-==Turkish==
-===Noun===
-
-# [[island]]
-[[ja:ada]]
+* [[Ada]]
+* http://www.ada-auth.org/acats.html
