+nl,fr,de,it <during#56562>

--- a/wiki/during.wikitext
+++ b/wiki/during.wikitext
@@ -10,6 +10,13 @@
 #: ''I lived with my parents at several points during the 1980's.''
 #: ''Many of the best examples were produced during the Restoration.''
 
+
+====Translations====
+* Dutch: [[tijdens]]
+* French: [[pendant]]
+* German: [[während]]
+* Italian: [[durante]]
+
 ===Related Terms===
 *[[all during]]
 *[[durable]]
