--- a/wiki/during.wikitext
+++ b/wiki/during.wikitext
@@ -13,9 +13,11 @@
 
 ====Translations====
 * Dutch: [[tijdens]]
-* French: [[pendant]]
+* French: [[durant]], [[pendant]]
 * German: [[während]]
 * Italian: [[durante]]
+* Russian: [[за]], [[пока]]
+* Slovio: [[podcxas]]
 
 ===Related Terms===
 *[[all during]]
