--- a/wiki/since.wikitext
+++ b/wiki/since.wikitext
@@ -1,20 +1,31 @@
 ==[[English]]==
 ===[[Preposition]]===
 # from (time)
-#:'''translations'''
-#:*[[Indonesian]]: [[sejak]], [[dari]], [[mulai]], sejak dari, mulai dari
-#:*[[Interlingua]]: [[de]], [[desde]], [[a partir de]]
-#:*[[Japanese]]: [[から]] (kara), [[より]] (yori)
-#:*[[Portuguese]]: [[desde]], [[a partir de]]
+
+====Translations====
+*Dutch: [[sinds]]
+*French: [[depuis]]
+*German: [[seit]]
+*[[Indonesian]]: [[sejak]], [[dari]], [[mulai]], sejak dari, mulai dari
+*[[Interlingua]]: [[de]], [[desde]], [[a partir de]]
+*[[Japanese]]: [[から]] (kara), [[より]] (yori)
+*[[Portuguese]]: [[desde]], [[a partir de]]
+
 ===[[Conjunction]]===
 # from the time that
-#: '''translations'''
-#:*[[Interlingua]]: [[desde que]], [[post que]]
-#:*[[Portuguese]]: [[desde que]], [[desde quando]], [[a partir de quando]]
-#:
+
+====Translations====
+*Dutch: [[sinds]]
+*German: [[seitdem]]
+*[[Interlingua]]: [[desde que]], [[post que]]
+*[[Portuguese]]: [[desde que]], [[desde quando]], [[a partir de quando]]
+
+===[[Conjunction]]===
 # because
-#: '''translations'''
-#:*[[Indonesian]]: [[karena]]
-#:*[[Interlingua]]: [[proque]]
-#:*[[Japanese]]: [[ため]] (tame), [[により]] (ni yori), [[によって]] (ni yotte)
-#:*[[Portuguese]]: [[porque]], [[pois]], [[visto que]]
+
+====Translations====
+* Dutch: [[omdat]]
+*[[Indonesian]]: [[karena]]
+*[[Interlingua]]: [[proque]]
+*[[Japanese]]: [[ため]] (tame), [[により]] (ni yori), [[によって]] (ni yotte)
+*[[Portuguese]]: [[porque]], [[pois]], [[visto que]]
