dewikify headings & well-known langs <since#5662>

--- a/wiki/since.wikitext
+++ b/wiki/since.wikitext
@@ -1,31 +1,37 @@
-==[[English]]==
-===[[Preposition]]===
+==English==
+===Preposition===
+'''since'''
+
 # from (time)
 
 ====Translations====
 *Dutch: [[sinds]]
 *French: [[depuis]]
 *German: [[seit]]
-*[[Indonesian]]: [[sejak]], [[dari]], [[mulai]], sejak dari, mulai dari
+*Indonesian: [[sejak]], [[dari]], [[mulai]], sejak dari, mulai dari
 *[[Interlingua]]: [[de]], [[desde]], [[a partir de]]
-*[[Japanese]]: [[から]] (kara), [[より]] (yori)
-*[[Portuguese]]: [[desde]], [[a partir de]]
+*Japanese: [[から]] (kara), [[より]] (yori)
+*Portuguese: [[desde]], [[a partir de]]
 
-===[[Conjunction]]===
+===Conjunction===
+'''since'''
+
 # from the time that
 
 ====Translations====
 *Dutch: [[sinds]]
 *German: [[seitdem]]
 *[[Interlingua]]: [[desde que]], [[post que]]
-*[[Portuguese]]: [[desde que]], [[desde quando]], [[a partir de quando]]
+*Portuguese: [[desde que]], [[desde quando]], [[a partir de quando]]
 
-===[[Conjunction]]===
+===Conjunction===
+'''since'''
+
 # because
 
 ====Translations====
-* Dutch: [[omdat]]
-*[[Indonesian]]: [[karena]]
+*Dutch: [[omdat]]
+*Indonesian: [[karena]]
 *[[Interlingua]]: [[proque]]
-*[[Japanese]]: [[ため]] (tame), [[により]] (ni yori), [[によって]] (ni yotte)
-*[[Portuguese]]: [[porque]], [[pois]], [[visto que]]
+*Japanese: [[ため]] (tame), [[により]] (ni yori), [[によって]] (ni yotte)
+*Portuguese: [[porque]], [[pois]], [[visto que]]
