--- a/wiki/turkey.wikitext
+++ b/wiki/turkey.wikitext
@@ -55,36 +55,44 @@
 *Vietnamese: [[Thổ Nhĩ Kỳ]]
 *Yiddish: [[טערקײַ]] (Terkay)
 
-==== See also ====
-[[Countries of the world]]
-
 === Noun ===
-'''turkey'''
+'''turkey''' (''plural'' '''turkeys''')
 
-# either of two species of [[bird]] in the family ''Meleagrididae'' with fan-shaped [[tail]]s and wattled [[neck]]s.  See [[w:Turkey_(bird)]]
-# a failure.  
-#:''This film was a turkey.''
-# (''slang, usually derogatory'') a stupid or incompetent person.
+#Either of two species of [[bird]] in the family ''Meleagrididae'' with fan-shaped [[tail]]s and wattled [[neck]]s.
+#(''colloquial'') A failure.  
+#:''That film was a turkey.''
+#(''slang, usually derogatory'') A stupid or incompetent person.
 #:''The turkey cut in front of me and then berated me for running into him.''
 
-:Photo of turkeys (1):
+====Scientific name====
+''Meleagris gallopavo''
+
+:Photo of turkeys, the birds:
 [[Image:turkeys_1.jpg|Photo of a turkey]]
 
 ==== Synonyms ====
-*[[flop]] (2)
+*(''failure''): [[flop]]
+*(''stupid person''): [[fool]], [[idiot]], [[jerk]] (''US''), [[plonker]] (''UK''), [[prat]] (''UK'')
 
 ====Derived terms====
 *[[turkey vulture]]
 
 ==== Translations ====
+
+'''bird'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
 *Albanian: [[gjeli i detit]]
 *Arabic: [[ديك هندي]], [[ديك رومي]]
 *[[Azari]]: [[hindishga]]
 *[[Basque]]: [[indioilar]], [[indioilo]]
 *Belarusian: [[дзікая індычка]]
-*[[Bosnian]]: [[ćurka]] ''f'' (1), [[purica]] ''f'' (1)
-*Breton: [[yar-Indez]] ''f''  yer-Indez ''pl'', [[kilhog-Indez]] ''m''  kilheien-Indez ''pl''
-*Bulgarian: [[пуйка]] ''f'' (1), [[провал]] ''n'' (2), [[глупак]] ''m'' (3)
+*[[Bosnian]]: [[ćurka]] ''f'', [[purica]] ''f''
+*Breton: [[yar-Indez]] ''f''  yer-Indez ''plural'', [[kilhog-Indez]] ''m''  kilheien-Indez ''plural''
+*Bulgarian: [[пуйка]] ''f''
 *Catalan: [[gall dindi]], [[polla d’índia (paó)]]
 *Chinese: [[火鸡]] (huǒ jī)
 *Croatian: [[puran]]
@@ -99,39 +107,43 @@
 *Frisian: [[kalkoen]]
 *Friulian: [[dindi]], [[dindiat]]
 *Gallegan: [[pavo]]
-*German: [[Truthahn]] ''m'', [[Truthenne]] ''f''; [[Puter]] ''m'', [[Pute]] ''f''
-*Greek: [[γαλοπούλα]], [[διάνος]], [[κούρκος]] '' ''
+*German: [[Truthahn]] ''m'', [[Truthenne]] ''f''; [[Puter]] ''m'', [[Pute#German|Pute]] ''f''
+*Greek: [[γαλοπούλα]], [[διάνος]], [[κούρκος]]
 *Hebrew: (tarnegol hodu)
 *Hungarian: [[pulyka]]
 *Icelandic: [[kalkún]]
-*{{id}}: [[kalkun]], [[ayam kalkun]], [[ajam belanda]]
+*Indonesian: [[kalkun]], [[ayam kalkun]], [[ajam belanda]]
 *Irish: [[turcaí]]
 *Italian: [[tacchino]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
 *Japanese: [[七面鳥]] ([[しちめんちょう]], shichimenchō)
-*Ladin: [[tachin]]
-*Latin: [[Meleagris gallopavo]] '' ''
+*Ladin: [[tachin]]<!--do not put scientific name under Latin-->
 *Latvian: [[tītars]]
 *Lithuanian: [[kalakutas]]
-*Lower Sorbian: [[truta]], [[trutawa]], [[turk]]
+*[[Lower Sorbian]]: [[truta]], [[trutawa]], [[turk#Lower_Sorbian|turk]]
 *Macedonian: [[мисир]] , (misir) ''m'', [[мисирка]] ([[misirka]]) ''f''
-*{{ms}}: [[ayam]] [[Belanda]]
+*[[Malay]]: [[ayam]] [[Belanda]]
 *Maltese: [[dundjan]]
 *Norwegian: [[kalkun]]
-*Occitan: [[piòt]]
+*[[Occitan]]: [[piòt]]
 *Persian: (bugalamun)
 *Polish: [[indyk]] '' ''
 *Portuguese: [[peru]]
-*Romanian: [[curcan]] ''m'', [[curc&#259]] ''f'', [[curcani]] ''m pl'', [[curci]] ''f pl''
+*Romanian: [[curcan]] ''m'', [[curc&#259]] ''f''<!--this belongs under the Romanian entry: [[curcani]] ''m plural'', [[curci]] ''f plural''-->
 *Romansh: [[galdin]]
 *Romany: [[tudkano]] ''m'', [[tudka]] ''f''
-*Russian: [[дикая индейка]] ([[dikaja indejka]]) '' ''
+*Russian: [[дикая индейка]] ([[dikaja indejka]])
 *Sami: [[kálkon]]
 *Sardinian: [[dindu]], [[caboni de ěndias]], [[pudda d’ěndia]]
 *Scottish: [[pulaidh]]
 *Serbian: [[ћуран]] ([[ćuran]])
 *Slovak: [[moriak]] ''m'', [[morka]] ''f''
-*Slovenian: [[puran]] ''m'' (1), [[pura]] ''f'' (1)
-*Spanish: [[pavo]] ''m''; [[guajolote]] ''m'' (Mexico)
+*Slovenian: [[puran]] ''m'', [[pura#Slovenian|pura]] ''f''
+*Spanish: [[pavo]] ''m''; (''Mexican'') [[guajolote]] ''m''
 *Swahili: [[bata mzinga]]
 *Swedish: [[kalkon]]
 *Turkish: [[hindi]]
@@ -139,5 +151,47 @@
 *Upper Sorbian: [[truta]], [[trutak]]
 *Welsh: [[twrci]]
 *Yiddish: [[indik]]
+|}
+|}
+
+'''failure'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''stupid person'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The numbering is not necessarily reliable.
+
+*Bulgarian: [[провал]] ''n'' (2), [[глупак]] ''m'' (3)
+
+=== See also ===
+*[[w:Turkey|Wikipedia article on Turkey]]
+*[[w:Turkey_(bird)|Wikipedia article on turkeys, the birds]]
+*[[Wiktionary:Countries of the world|Wiktionary appendix of countries]]
 
 [[Category:English birds]]
