--- a/wiki/havoc.wikitext
+++ b/wiki/havoc.wikitext
@@ -1,20 +1,17 @@
-=={{en}}==
-[[Category:English language]]
-===Spellings===
-also [[havock]] (e.g. in Milton)
+==English==
+
+===Variant spellings===
+[[havock]] (e.g. in Milton)
 ===Noun===
 '''havoc''' (''Uncountable'')
-
 #[[chaos]]
 #[[devastation]]
 ===Verb===
 '''havoc'''
-
 #to [[pillage]]
+#:'''Quotations'''
+#:*'''1599''': To tear and '''havoc''' more than she can eat. &mdash; Shakespeare, ''Henry V,'' I-ii
 
-====Quotations====
-*'''1599''': To tear and '''havoc''' more than she can eat. &mdash; Shakespeare, ''King Henry V''
-
-===Related Terms===
+===Derived Terms===
 *[[cry havoc]]
 *[[play havoc]], [[raise havoc]], [[wreak havoc]]
