--- a/wiki/kludge.wikitext
+++ b/wiki/kludge.wikitext
@@ -1,1 +1,8 @@
-Also spelled kluge.  In electronics engineering, an improvised device, usually crudely constructed.  Typically used to test the validity of a principle before doing a finished design.
+==English==
+===Noun===
+'''kludge'''
+
+# (''electronics engineering'') an improvised [[device]], usually [[crude]]ly constructed.  Typically used to test the validity of a principle before doing a finished design.
+
+====Aternative spellings====
+*[[kluge]]
