--- a/wiki/derelict.wikitext
+++ b/wiki/derelict.wikitext
@@ -19,7 +19,7 @@ Derelict
 Italian
 
 ==Examples==
-There was an derelict ship on the island.
+There was a derelict ship on the island.
 
 
  ==Synonyms==
