--- a/wiki/moil.wikitext
+++ b/wiki/moil.wikitext
@@ -1,5 +1,21 @@
 =={{en}}==
 ===Noun===
-# [[toil]]
+=== Pronunciation ===
+Write pronunciation here. (Use a dictionary for this part.)
+
+=== Verb ===
+
+'''Moil.'''
+
+#to work hard
+
+
+==Examples==
+I do not like to moil.
+
+
+ ==Synonyms==
+toil, work, labor
+
 ===Verb===
 # to [[toil]]
