--- a/wiki/aster.wikitext
+++ b/wiki/aster.wikitext
@@ -1,9 +1,11 @@
-=={{en}}==
-[[Category:English language]]
+==English==
+
 ===Noun===
 '''aster''' ([[asters]])
+#a type of flower
 
-#{{stub}}
+'''''Aster'''''
+#a genus of plants in the family [[Asteraceae]]
 
 ====Translations====
 *{{zh}}: [[翠菊]]
@@ -12,5 +14,3 @@
 *{{ja}}: [[星状体]]
 *{{ko}}: [[과꽃]]
 *{{ru}}: [[астра]] ''f'' (astra)
-
-[[Category:Definitionless words: English]]
