--- a/wiki/mamba.wikitext
+++ b/wiki/mamba.wikitext
@@ -1,10 +1,7 @@
-=={{en}}==
-[[Category:English language]]
+==English==
+
 ===Etymology===
 From Zulu.
 ===Noun===
 '''mamba'''
-
-#a snake. {{stub}}
-
-[[Category:Definitionless words: English]]
+#a type of snake.
