attempt to fmt; needs more work <moil#61178>

--- a/wiki/moil.wikitext
+++ b/wiki/moil.wikitext
@@ -1,21 +1,11 @@
 =={{en}}==
-===Noun===
-=== Pronunciation ===
-Write pronunciation here. (Use a dictionary for this part.)
-
 === Verb ===
-
-'''Moil.'''
+'''to moil'''
 
 #to work hard
+:''I do not like to moil.''
 
-
-==Examples==
-I do not like to moil.
-
-
-==Synonyms==
-toil, work, labor
-
-===Verb===
-# to [[toil]]
+====Synonyms====
+*[[labour]], [[labor]]
+*[[toil]]
+*[[work]]
