fmt; might need more work <iguana#64464>

--- a/wiki/iguana.wikitext
+++ b/wiki/iguana.wikitext
@@ -1,13 +1,8 @@
+==English==
 === Pronunciation ===
 i-'gwä-n&
-=== noun===
 
-iguana
+===Noun===
+'''iguana'''
 
-a large tropical American lizard that eats insects.
-
-
-
-
-==Examples==
-look at that big green iguana.
+# a large tropical American [[lizard]] that eats insects.
