--- a/wiki/pec.wikitext
+++ b/wiki/pec.wikitext
@@ -2,10 +2,5 @@
 ===Noun===
 '''pec''' (''plural'' '''pecs''')
 
-#(''informal''; ''usually in plural'') A [[pectoral muscle]].
+#(''colloquial''; ''usually in plural'') A [[pectoral muscle]].
 #:''He's flexing his pecs at anyone who'll look.''
-
-===See also===
-*[[ab]]
-*[[delt]]
-*[[quad]]
