proper n, adj, syns, Wikipedia link; some translations <Mickey Mouse#64483>

--- a/wiki/Mickey_Mouse.wikitext
+++ b/wiki/Mickey_Mouse.wikitext
@@ -2,7 +2,21 @@
 ===Proper noun===
 '''Mickey Mouse'''
 
-#A [[w:Disney|Disney]] character.
+#One of the [[w:Disney|Disney]] characters.
+
+====Translations====
+*Chinese: [[米老鼠]]
+*Danish: Mickey Mouse
+*Dutch: Mickey Mouse
+*[[Esperanto]]: Mickey Mouse
+*French: Mickey Mouse
+*German: [[Mickey Maus]]
+*Hebrew: [[מיקי מאוס]]
+*Italian: [[Topolino]]
+*Japanese: [[ミッキーマウス]]
+*Portuguese: [[Rato Mickey]]
+*Spanish: Mickey Mouse
+*Swedish: [[Musse Pigg]]
 
 ===Adjective===
 '''Mickey Mouse''' (''no [[comparative]] or [[superlative]]'')
