/* Translations */ remove empty native script russian square brackets <fat#1038499>

--- a/wiki/fat.wikitext
+++ b/wiki/fat.wikitext
@@ -23,13 +23,13 @@
 
 ==== Translations ====
 *Bulgarian: [[мазнина]] ''f''
-*Czech: [[tuk]]  ''m''
-* Danish: [[fedt]] ''n''
+*Czech: [[tuk]] ''m''
+*Danish: [[fedt]] ''n''
 *Dutch: [[vet]] ''n''
 *Finnish: [[rasva]] (1, 2), [[läski]] (1), [[liiat]] ''pl'' (3), [[vati#Finnish|vati]] (4)
 *French: [[graisse]] ''f''
-*Russian: [[]] (žir) ''m''
-*Slovak: [[tuk]]  ''m''
+*Russian: (žir) ''m''
+*Slovak: [[tuk]] ''m''
 *Spanish: [[grasa]] ''f''
 *Swedish: [[fett]] (1,2)
 
