/* Translations */ pipelink arabic shadda; wikify hebrew; etc <ant#4355>

--- a/wiki/ant.wikitext
+++ b/wiki/ant.wikitext
@@ -16,7 +16,7 @@
 *[[bull ant]]
 ====Translations====
 *Albanian: [[milingonë]] ''f''
-*Arabic: [[نّمل]] (plural only?)
+*Arabic: [[نمل|نّمل]] (plural only?)
 *[[Aragonese]]: [[fornica]] ''f''
 *[[Arrernte]]: [[yerre]]
 *[[Bosnian]]: [[mrav]] ''m''
@@ -36,7 +36,7 @@
 *German: [[Ameise]] ''f''
 *[[Gooniyandi]]: [[migi]]
 *[[Guarani]]: [[tahýi]]
-*Hebrew: נמלה ''f''
+*Hebrew: [[נמלה]] ''f''
 *Indonesian: [[semut]]
 *[[Interlingua]]: [[formica]]
 *Italian: [[formica]] ''f''
@@ -51,7 +51,7 @@
 *[[Nahuatl]]: [[azcatl]]
 *[[Nyungar]]: [[budjin]], [[burdak]], [[dhudula]], [[karrart]], [[kwelka]]
 *[[Paakantyi]]: [[piipuru]]
-*[[Persian]]: [[مورچه]] (Murche)
+*[[Persian]]: [[مورچه]] (murche)
 *[[Pitjantjatjara]]: [[minga]]
 *Polish: [[mrówka]] ''f''
 *Portuguese: [[formiga]] ''f''
