/* Proper noun */ wikify each part of term; +ja romaji; is there no middle dot to separate parts of name in ja? <Mickey Mouse#64483>

--- a/wiki/Mickey_Mouse.wikitext
+++ b/wiki/Mickey_Mouse.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Proper noun===
-'''Mickey Mouse'''
+'''[[Mickey]] [[Mouse]]'''
 
 #One of the [[w:Disney|Disney]] characters.
 
@@ -13,7 +13,7 @@
 *German: [[Mickey Maus]]
 *Hebrew: [[מיקי מאוס]]
 *Italian: [[Topolino]]
-*Japanese: [[ミッキーマウス]]
+*Japanese: [[ミッキーマウス]] (mikkiimausu)
 *Portuguese: [[Rato Mickey]]
 *Spanish: Mickey Mouse
 *Swedish: [[Musse Pigg]]
