cleaned up; fixed pronunciation; made def make sense; +gender, initial cap and alt translation to de:; +fr:, it: & es: genders; +de: entry <zebu#64467>

--- a/wiki/zebu.wikitext
+++ b/wiki/zebu.wikitext
@@ -1,17 +1,25 @@
-=== Pronunciation ===
-źē-b(y)Ǖn
+==English==
+===Pronunciation===
+*[[IPA]]: /ˈzɛbu/, /ˈzɛbju/<!--do not add a length mark to the u is it is final and unstressed-->
+*[[SAMPA]]: /"zEbu/, /"zEbju/<!--do not add a length mark to the u is it is final and unstressed-->
 
-== Noun ===
+===Noun===
+'''zebu''' (''plural'' '''zebus''')
 
-Zebu
-An Asian domesticated ox distinguished from European cattle with which it crosses freely by a large fleshly hump over a loose skin prolonged into dewlap
-And folds
+#An [[domesticated]] [[ox]] native to Asia and Africa, having a large [[fleshy]] [[hump]] on its back and a [[dewlap]].
 
+==== Translations ====
+*French: [[zébu]] ''m''
+*German: Zebu ''n'', [[Buckelrind]] ''n''
+*Italian: [[zebù]] ''m''
+*Spanish: [[cebú]] ''m''
 
-=== Translations ===
-*[[German]]: [[zebu]]
-*[[French]]: [[ 
-zébu]
+----
+==German==
+===Noun===
+'''Zebu''' ''m''
 
-*[[Spanish]]: [[cebú]]
-*[[Italian]]: [[zebù ]]
+#zebu
+
+====Synonyms====
+*[[Buckelrind]]
