+RP; fmt <dewlap#40145>

--- a/wiki/dewlap.wikitext
+++ b/wiki/dewlap.wikitext
@@ -1,19 +1,15 @@
 ==English==
 ===Etymology===
-Dew + lap to lick.
+[[Dew]] + [[lap]], to lick.
 
 ===Pronunciation===
-IPA: [[WEAE]] /ˈdu.læp/ or /ˈdju-/
+*[[IPA]]:
+**[[WEAE]]: /ˈdu.læp/, /ˈdju.læp/
+**[[RP]]: /ˈdjuː.læp/
 
 ===Noun===
-# The pendulous skin under the neck of an ox, which laps or licks the dew in grazing.
-# The same feature on any animal.
-# The flesh upon the human throat, especially when with age
+#The [[pendulous]] skin under the neck of an ox, which laps or licks the dew in grazing, or a similar feature on any other animal.
+#The [[sag]]ging flesh on the human throat of an old person.
 
 ====Quotations====
-<blockquote>
-Fire burst from its
-open mouth, its eyes glowed with a smouldering glare, its muzzle
-and hackles and dewlap were outlined in flickering flame.<BR>
-&mdash;A. Conan Doyle in ''The Hound of the Baskervilles''
-</blockquote>
+*'''1901 &ndash; 1902''': Fire burst from its open mouth, its eyes glowed with a smouldering glare, its muzzle and hackles and dewlap were outlined in flickering flame. &mdash; ''[[w:The Hound of the Baskervilles|The Hound of the Baskervilles]]'', [[w:Arthur Conan Doyle|Sir Arthur Conan Doyle]]
