--- a/wiki/contiguous.wikitext
+++ b/wiki/contiguous.wikitext
@@ -1,4 +1,4 @@
 ==English==
 
 ===Adjective===
-# [[close]], [[connected]], [[touching]], [[adjacent]]
+# [[close]], [[connected]], [[touching]], [[adjacent]], [[abut]]
