-finite, NPOV ("corruption") <algorithm#64258>

--- a/wiki/algorithm.wikitext
+++ b/wiki/algorithm.wikitext
@@ -1,11 +1,11 @@
 ==English==
 ===Etymology===
-A corruption of the name of the Arab mathematician [[w:al-Khwarizmi|al-Khwarizmi]]
+From the name of the Arab mathematician [[w:al-Khwarizmi|al-Khwarizmi]]
 
 ===Noun===
 '''algorithm''' (''plural'' '''algorithms''')
 
-#A well-defined procedure containing a finite number of steps describing how to carry out a particular task, independent of any computing system that might do that task.
+#A well-defined procedure describing how to carry out a particular task, independent of any computing system that might do that task.
 #:''There are several well-known algorithms for multiplying numbers, including the method most of us learned in primary school.''
 
 ====Translations====
