--- a/wiki/peremptory.wikitext
+++ b/wiki/peremptory.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Adjective===
 '''peremptory'''
-#Precluding debate or expostulation; not admitting of question or appeal; positive; absolute; decisive; conclusive; final.
-#Positive in opinion or judgment; decided; dictatorial; dogmatical.
-#Firmly determined; unawed.
+#[[preclude|Precluding]] [[debate]] or [[expostulation]]; not [[admitt]]ing of [[question]] or [[appeal]]; [[positive]]; [[absolute]]; [[decisive]]; [[conclusive]]; [[final]].
+#Positive in [[opinion]] or [[judgment]]; [[decide]]d]; [[dictatorial]]; [[dogmatical]].
+#[[Firm]]ly [[determine]]d; [[unawe]]d.
