/* Noun phrase */ <integral calculus#64495>

--- a/wiki/integral_calculus.wikitext
+++ b/wiki/integral_calculus.wikitext
@@ -3,7 +3,7 @@
 ===Noun phrase===
 '''integral calculus''' plural, '''integral calculi''' (rare)
 
-# (''mathematics'') A [[caclulus]] genralizing summation to handle continously variable functions.
+# (''mathematics'') A [[calculus]] genralizing summation to handle continously variable functions.
 # (''mathematics'') The study of [[integration]].
 
 ===Related terms===
