It's called a "preview button" . . . <integral calculus#64495>

--- a/wiki/integral_calculus.wikitext
+++ b/wiki/integral_calculus.wikitext
@@ -8,9 +8,9 @@
 
 ===Related terms===
 *[[calculus]]
+*[[differential calculus]]
 *[[integral]]
 *[[integration]]
-*[[differentiation]]
 
 ===See also===
 *[[analysis]]
