/* Noun phrase */ More consistent defn <differential calculus#64336>

--- a/wiki/differential_calculus.wikitext
+++ b/wiki/differential_calculus.wikitext
@@ -3,7 +3,7 @@
 '''differential calculus''' (''plural'' '''differential calculi''')
 
 #(''mathematics'') A [[calculus]] handling [[instantaneous]] rates of change.
-#(''mathematics'') The study of instantaneous rates of change.
+#(''mathematics'') The study of [[differential]]s and [[differentiation]].
 
 ===Related terms===
 *[[differential]]
