--- a/wiki/friend.wikitext
+++ b/wiki/friend.wikitext
@@ -4,44 +4,115 @@ From Middle English, from Old English [[freond|frēond]].
 ===Noun===
 '''friend''' (''plural'' friends)
 
-#Someone who you like or know.
+#A person other than a [[family member]], [[spouse]] or [[lover]] whose company one enjoys and towards whom one feels [[affection]].
 #A [[boyfriend]] or [[girlfriend]].
-#A substance or discovery which can be used for good.
-#Used to indicate a lack of friendliness in some situations. "You'd better watch it, friend". 
+#An object or idea that can be used for good.
+#:''Google is your friend.''
+#(''colloquial'', ''ironic''; ''used only in the [[vocative]]'') Used as a form of address when warning someone.
+#:''You'd better watch it, friend''
+
+====Synonyms====
+*(''person whose company one enjoys''): [[bud]] (''US, Canada''), [[buddy]] (''US, Canada''), [[chum]] (''British''), [[mate]] (''British''), [[pal]]
+*(''boyfriend, girlfriend''): [[boyfriend]], [[girlfriend]], [[lover]]
+*(''object or idea that can be used for good''):
+*(''form of address used in warning someone''): [[buster]], [[mate]] (''British''), [[pal]]
 
 ====Antonyms====
-*[[enemy]]
-*[[nemesis]]
+*(''person whose company one enjoys''): [[enemy]], [[foe]], [[nemesis]] (''non-standard'')
 
-====Related terms====
+====Derived terms====
 *[[friendly]]
 *[[friendship]]
 *[[false friend]]
 
 ====Translations====
+
+'''person whose company one enjoys'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[ami]] ''m'', [[amie]] ''f''
+*German: [[Freund]] ''m'', [[Freundin]] ''f''
+*[[Interlingua]]: [[amico#Interlingua|amico]]
+*Italian: [[amico#Italian|amico]] ''m'', [[amica]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Latin: [[amicus]] ''m'', [[amica]] ''f''
+*Portuguese: [[amigo]] ''m'', [[amiga]] ''f''
+*Romanian: [[prieten]], [[amic]] ''m'', [[prietenă]], [[amică]] ''f''
+*Spanish: [[amigo]] ''m'', [[amiga]] ''f''
+|}
+|}
+
+'''boyfriend or girlfriend'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: (''boyfriend''): [[petit ami]] ''m'', [[copain]] ''m''; (''girlfriend''): [[petite amie]] ''f'', [[copine]] ''f''
+*Italian: (''boyfriend''): [[ragazzo]] ''m''; (''girlfriend''): [[ragazza]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''object or idea that can be used for good'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''form of address used to warn someone'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  Note that the numbering is incorrect.
+
 *[[Breton]]: [[mignon]] ''m'' (1), [[mignonez]] ''f'' (2)
 *Chinese: [[朋友]]
 *Dutch: [[vriend]] ''m'' (1), [[vriendin]] ''f'' (2)
 *[[Esperanto]]: [[amiko]] (1), [[amikino]] (2)
 *Finnish: [[ystävä]] (1, 2), [[frendi]] (1, 2, ''colloquial''), [[tuttu]] (1), [[tuttava]] (1), [[kumppani]] (2), [[tuttavuus]] (3), [[kaveri]] (4)
-*French: [[ami]] ''m'' (1), [[amie]] ''f'' (2)
 *Georgian: [[მეგობარი]] (megobari)
-*German: [[Freund]] ''m'' (1), [[Freundin]] ''f'' (2)
 *Hebrew: [[ידיד]] ''m''
-*Indonesian: [[teman]], [[sahabat]], [[kawan]], [[sobat]] (This is very uncommon)
-*[[Interlingua]]: [[amico]]
-*Italian: [[amico]] ''m'' (1), [[amica]] ''f'' (2)
+*Indonesian: [[teman]], [[sahabat]], [[kawan]], [[sobat]] (''rare'')
 *Japanese: [[友達]] (ともだち, tomodachi)
 *Korean: [[친구]] [親舊] (chingu)
 *Latenkwa: [[zaytwi]]
-*Latin: [[amicus]] ''m'', [[amica]] ''f''
 *Persian: [[دوست]] (dust)
 *Polish: [[przyjaciel]] ''m'', [[przyjaciółka]] ''f''
-*Portuguese: [[amigo]] ''m'' (1), [[amiga]] ''f'' (2)
-*Romanian: [[prieten]], [[amic]] ''m'' (1), [[prietenă]], [[amică]] ''f'' (2)
 *{{ru}}: [[друг]] ''m''
 *Slovak: [[priateľ]] ''m'', [[priateľka]] ''f''
 *Slovene: [[prijatelj]] ''m'', [[prijateljica]] ''f''
-*Spanish: [[amigo]] ''m'' (1), [[amiga]] ''f'' (2)
-*Swedish: [[vän]] (1,2)
+*Swedish: [[vän]] (1, 2)
 *Turkish: [[arkadaş]] ''m'' (1), [[kız arkadaş]] ''f'' (2)
