/* English */ antonym <pertain#62964>

--- a/wiki/pertain.wikitext
+++ b/wiki/pertain.wikitext
@@ -11,3 +11,6 @@
 ====Quotations====
 (''relate''):
 *'''1989''': Sort out any booklets or manuals that pertain to the heating system or any other fixture that you are leaving behind. &mdash; ''One's company'', Underwood, Lynn, Southampton: Ashford.
+
+====Antonyms====
+be [[irrelevant]]
