--- a/wiki/freshman.wikitext
+++ b/wiki/freshman.wikitext
@@ -1,10 +1,9 @@
 ==English==
-
 ===Noun===
-'''freshman'''
+'''freshman''' (''plural'' '''freshmen''')
 
-# One entering the first year of an institution, particularly a school or legislative body.
-#: ''At the time I was a wide-eyed freshman, but I was soon to grow jaded and cynical.''
+#A person of either sex entering the first year of an institution, especially a [[university]] or legislative body.
+#:''At the time I was a wide-eyed freshman, but I was soon to grow jaded and cynical.''
 
-===Related Terms===
-*[[frosh]]
+===Synonyms===
+*[[fresher]] (''British''), [[frosh]] (''US'')
