--- a/wiki/kim.wikitext
+++ b/wiki/kim.wikitext
@@ -1,3 +1,13 @@
+===Given Name===
+Kim, male name as in Kim from Kiplings book of the same name. 
+
+Literal translation from the Old norse as Son of God, or Son of Chief, both meanings sharing same translation; again both obviously male in form.
+
+
+
+Also a reference as a second name from Confusionism of China. 
+
+
 ===Given name===
 '''Kim'''
 # A feminine name, a short form of [[Kimberly]].
