"fort" only' <ft.#29405>

--- a/wiki/ft..wikitext
+++ b/wiki/ft..wikitext
@@ -1,4 +1,9 @@
+==English==
 ===Abbreviation===
+'''ft.'''
 
-# [[feet]], used without a [[ft|period]].
-# [[fort]]
+#[[fort]]
+#:Ft. Lauderdale
+
+===See also===
+*[[ft]]
