def, der, see also <FT#64502>

--- a/wiki/ft.wikitext
+++ b/wiki/ft.wikitext
@@ -1,13 +1,11 @@
 ==English==
-===Abbreviation/symbol===
-'''ft'''
-
-#[[Foot]] (''unit of length'').
-
 ===Abbreviation===
-'''ft'''
+'''FT'''
 
-#(''also'' '''ft.''') [[Fort]].
+#[[w:Financial Times|Financial Times]]
+
+===Derived terms===
+*[[FTSE]]
 
 ===See also===
-*[[FT]]
+*[[ft]], [[ft.]]
