--- a/wiki/current_events.wikitext
+++ b/wiki/current_events.wikitext
@@ -6,8 +6,9 @@ This page is to list any interesting new words, abbreviations, etc, that are ent
 ==A== 	
 *[[aspiratage]] 	
 *[[astroturfing]] 	
-*[[autocannibalism]] 	
- 	
+*[[autocannibalism]]
+[[autotheism]]
+
 ==B== 	
 *[[bingo wings]] 	
  	
