--- a/wiki/current_events.wikitext
+++ b/wiki/current_events.wikitext
@@ -7,7 +7,7 @@ This page is to list any interesting new words, abbreviations, etc, that are ent
 *[[aspiratage]] 	
 *[[astroturfing]] 	
 *[[autocannibalism]]
-[[autotheism]]
+*[[autotheism]]
 
 ==B== 	
 *[[bingo wings]] 	
