--- a/wiki/contractor.wikitext
+++ b/wiki/contractor.wikitext
@@ -1,7 +1,1 @@
-===Noun===
-'''contractor'''
-
-# a person who executes the building or improving of buildings
-
-====Translations====
-*Dutch: [[aannemer]] ''m''
+dongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongding
