+translation tables & Wikipedia link; +more translations & etym from Wikipedia <Genoa#18392>

--- a/wiki/Genoa.wikitext
+++ b/wiki/Genoa.wikitext
@@ -1,36 +1,122 @@
 ==English==
-===Pronunciation===
-*[[IPA]]:
-*:(''US'') /'dʒenouə/, (''non-standard'') /dʒen'ouə/
-*:(''British'') /'dʒenəuə/, (''non-standard'') /dʒen'əuə/
-*[[SAMPA]]: /"dZEn@U@/, (''non-standard'') /dZ@"n@U@/
+===Etymology===
+From ''Genua'', as the city was known by the ancient [[Ligurian]]s; probably from Ligurian word for "knee", from [[Proto-Indo-European]] *''genu'', knee, i.e., angle, from its geographical position, thus akin to [[Geneva]].
 
 ===Proper noun===
 '''Genoa'''
 
+====Pronunciation====
+<!--here because the pronunciation of the common noun is different-->
+*[[IPA]]:
+*:(''US'') /'dʒenouə/, (''non-standard'') /dʒen'ouə/
+*:(''British'') /'dʒenəʊə/, (''non-standard'') /dʒen'əʊə/
+*[[SAMPA]]: /"dZEn@U@/, (''non-standard'') /dZ@"n@U@/
+<br>
+
 #A [[province]] of [[Liguria]], [[Italy]].
-#A [[port]] and the [[capital]] of the [[province]] of Genoa, and also the capital of [[Liguria]].
+#A [[city]] and the [[capital]] of the [[province]] of Genoa, and also the capital of [[Liguria]].
 #[[Name]] of [[several]] [[US]] [[city|cities]] and [[town]]s in the states of [[Colorado]], [[Illinois]], [[Nebraska]], [[Nevada]], [[New York]]  and [[Ohio]].
-#An [[Italian]] (association) [[football]] [[team]] (in [[full]], "Genoa [[Cricket]] and [[Football]] [[Club]]").
+#An [[Italian]] [[soccer]] [[team]] (in [[full]], "Genoa [[Cricket]] and [[Football]] [[Club]]").
 
 ====Translations====
+
+'''province'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*[[Esperanto]]: [[Ĝenovo]]
+*French: [[Gênes]]
+*German: [[Genua]]
+*Greek, Modern: [[Γένοβα]] ''f''
+*Japanese: [[ジェノヴァ]]
+*[[Ligurian]]: [[Zêna]]
+*Polish: [[Genua]]
+*Russian: [[Генуя]]
+*Spanish: [[Génova]]
+*Swedish: [[Genua]]
+*Turkish: [[Cenova]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''Italian city'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
 *Chinese: [[热那亚]]/[[熱那亜]] (Renaya)
-*[[Esperanto]]: [[Ĝenovo]] (1, 2)
-*French: [[Gênes]] (1, 2)
-*German: [[Genua]] (1, 2)
-*Greek (modern): [[Γένοβα]] ''f'' (1, 2)
+*Danish: [[Genova#Danish|Genova]]
+*Dutch: [[Genua]]
+*[[Esperanto]]: [[Ĝenovo]]
+*French: [[Gênes]]
+*[[Genoese]]: [[Zena]]
+*German: [[Genua#German|Genua]]
+*Greek, Modern: [[Γένοβα]] ''f''
 *Hebrew: [[גנואה]]   
-*Italian: [[Genova]] (1, 2), Genoa (3, 4)
-*Japanese: [[ジェノヴァ]] (1, 2)
-*[[Ligurian]]: [[Zêna]] (1, 2, 4)
-*Polish: [[Genua]] (1, 2)
-*Russian: [[Генуя]] (1, 2)
-*Spanish: [[Génova]] (1, 2)
-*Swedish: [[Genua]] (1, 2)
-*Turkish: [[Cenova]] (1, 2)
+*Italian: [[Genova#Italian|Genova]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Japanese: [[ジェノヴァ]]
+*[[Ligurian]]: [[Zêna]]
+*Polish: [[Genua#Polish|Genua]]
+*Russian: [[Генуя]]
+*Spanish: [[Génova]]
+*Swedish: [[Genua#Swedish|Genua]]
+*Turkish: [[Cenova]]
+|}
+|}
+
+'''in US'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Italian: Genoa
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''football team'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Italian: Genoa
+*[[Ligurian]]: [[Zêna]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
 
 ===Noun===
 '''genoa''' (''plural'' '''genoas''')
+
+===Pronunciation===
+<!--here because the pronunciation of the proper noun is different-->
+*[[IPA]]:
+*:(''US'') /ˈdʒenouə/, /ˈdʒeni/
+*:(''British'') /ˈdʒenəʊə/, /ˈdʒeni/
+*[[SAMPA]]: /"dZEn@U@/, /"dZ@ni/
+<br>
 
 #(''nautical'') A [[jib]] that [[extend]]s [[aft]] [[beyond]] the [[mast]].
 
@@ -39,3 +125,7 @@
 *Finnish: [[genua]]
 *French: [[génois]] ''m''
 *German: [[Genua]] ''f''
+
+===See also===
+*[[w:Genoa|Wikipedia article on Genoa, the Italian city]]
+*[[w:Genoa (disambiguation)|Wikipedia disambiguation page on the places called Genoa in the US]]
