--- a/wiki/autotheism.wikitext
+++ b/wiki/autotheism.wikitext
@@ -1,7 +1,7 @@
 ==Noun==
 
 ===Etymology===
-Greek: ''autos'': self abd ''theos'': god
+Greek: ''autos'': self and ''theos'': god
 
 #prideful to the extreme; conceit; worship of oneself
 
