--- a/wiki/faucet.wikitext
+++ b/wiki/faucet.wikitext
@@ -3,3 +3,6 @@
 ===Noun===
 
 # an [[expose]]d [[plumbing]] [[fitting]], a [[tap]] or [[spigot]], a [[regulator]] for [[control]]ling the [[flow]] of a [[liquid]] from a [[reservoir]]
+
+===Synonyms===
+*[[tap]]
