--- a/wiki/blackboard.wikitext
+++ b/wiki/blackboard.wikitext
@@ -3,6 +3,7 @@
 
 #A large flat surface, finished with black slate or a similar material, that can be written upon with [[chalk]] and subsequently erased.
 #''Chalkboard''.
+#A course management system used by institutions of higher education.  Often used to disseminate course documents and lecture notes.
 
 ====Related terms====
 *[[whiteboard]]
