--- a/wiki/contractor.wikitext
+++ b/wiki/contractor.wikitext
@@ -1,1 +1,9 @@
-dongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongdingdongding
+===Noun=== 
+
+'''contractor''' 
+
+# a person who executes the building or improving of buildings 
+
+====Translations==== 
+
+*Dutch: [[aannemer]] ''m''
