fmt, removed non-noun senses <autotheism#64506>

--- a/wiki/autotheism.wikitext
+++ b/wiki/autotheism.wikitext
@@ -1,13 +1,14 @@
-==Noun==
+==English==
 
 ===Etymology===
 Greek: ''autos'': self and ''theos'': god
 
-#prideful to the extreme; conceit; worship of oneself
+===Noun===
+'''autotheism'''
 
-Used to describe somone with too high of an opinion of themselves.
+# Worship of oneself
 
 ===Related Words===
-
+*[[autotheistic]]
 *[[theism]]
 *[[theistic]]
