--- a/wiki/eventify.wikitext
+++ b/wiki/eventify.wikitext
@@ -5,11 +5,10 @@
 
 * Let's think how we could '''eventify''' our next vacation. 
 
-*You know I love you but our relationship is becoming a routine. I'm looking for some ways to '''eventify'''  it.
+*Yo u know I love you but our relationship is becoming a routine. I'm looking for some ways to '''eventify'''  it.
 
+*It seems desirable to eventify one's life, but 
+this might prove distracting or even destructive for life itself.
 
-
-        It seems desirable to eventify one's life, but 
-thismight provedistracting or even destructive for life itself.
-{{protologism}} ) and assign it to the
-Protologism category (code: [[Category:Protologism]]ü
+{{protologism}} 
+ [[Category:Protologism]]
