--- a/wiki/eventify.wikitext
+++ b/wiki/eventify.wikitext
@@ -1,4 +1,7 @@
-'''eventify'''  v trans (event + ify) – to  fill with events, to make more eventful.
+==English==
+===Adjective===
+
+''eventify'''  v trans (event + ify) – to  fill with events, to make more eventful.
 
 
 *Do you want to '''eventify'''  your life? To make it fuller and more exciting? Come travel with us.
@@ -7,8 +10,8 @@
 
 *Yo u know I love you but our relationship is becoming a routine. I'm looking for some ways to '''eventify'''  it.
 
-*It seems desirable to eventify one's life, but 
-this might prove distracting or even destructive for life itself.
+*It seems desirable to eventify one's life, but this might prove distracting or even destructive for life itself.
+
 
 {{protologism}} 
  [[Category:Protologism]]
