--- a/wiki/eventify.wikitext
+++ b/wiki/eventify.wikitext
@@ -6,12 +6,16 @@
 
 *Do you want to '''eventify'''  your life? To make it fuller and more exciting? Come travel with us.
 
-* Let's think how we could '''eventify''' our next vacation. 
+* Let's think how we could '''eventify''' o ur next vacation. 
 
-*Yo u know I love you but our relationship is becoming a routine. I'm looking for some ways to '''eventify'''  it.
+*You know I love you but our relationship is becoming a routine. I'm looking for some ways to '''eventify'''  it.
 
 *It seems desirable to eventify one's life, but this might prove distracting or even destructive for life itself.
 
+Coined by [[M. N. Epstein]].
+
+*See [[Neologisms:unstable]] for a topical listing or [[:Category:Protologism]] for an alphabetical listing.
+* e.g., [[hu]] (gender-neutral pronoun).
 
 {{protologism}} 
  [[Category:Protologism]]
