--- a/wiki/eventify.wikitext
+++ b/wiki/eventify.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Verb===
 
-''eventify'''  v trans (event + ify) – to  fill with events, to make more eventful.
+'''eventify'''  v trans (event + ify) – to  fill with events, to make more eventful.
 
 
 *Do you want to '''eventify'''  your life? To make it fuller and more exciting? Come travel with us.
