--- a/wiki/eventify.wikitext
+++ b/wiki/eventify.wikitext
@@ -12,7 +12,7 @@
 
 *It seems desirable to eventify one's life, but this might prove distracting or even destructive for life itself.
 
-Coined by [[Mikhail Epstein http://www.emory.edu/INTELNET/Index.html]].
+Coined by M. N. Epstein [[http://www.emory.edu/INTELNET/Index.html]].
 
 *See [[Neologisms:unstable]] for a topical listing or [[:Category:Protologism]] for an alphabetical listing.
 * e.g., [[hu]] (gender-neutral pronoun).
