--- a/wiki/BNP.wikitext
+++ b/wiki/BNP.wikitext
@@ -2,7 +2,7 @@
 ===Abbreviation===
 '''BNP'''
 
-*[[w:British National Party|British National Party]].
+#[[w:British National Party|British National Party]].
 
 ----
 ==Afrikaans==
