--- a/wiki/eventify.wikitext
+++ b/wiki/eventify.wikitext
@@ -14,8 +14,10 @@
 
 Coined by M. N. Epstein [[http://www.emory.edu/INTELNET/Index.html]].
 
+[[Predictionary]] [[http://www.emory.edu/INTELNET/predictionary.html]]
 *See [[Neologisms:unstable]] for a topical listing or [[:Category:Protologism]] for an alphabetical listing.
 * e.g., [[hu]] (gender-neutral pronoun).
 
 {{protologism}} 
  [[Category:Protologism]]
+А
