fmt, syns; applied Occam's razor to examples <eventify#64510>

--- a/wiki/eventify.wikitext
+++ b/wiki/eventify.wikitext
@@ -1,22 +1,20 @@
 ==English==
-===Verb===
+===Etymology===
+[[event]] + [[-ify]]; coined by M. N. Epstein (see [http://www.emory.edu/INTELNET/Index.html]).
 
-'''eventify'''  v trans (event + ify) – to  fill with events, to make more eventful.
 
+===Transitive verb===
+'''to eventify''' ('''eventifying''', '''eventified''', '''eventified''')
 
-*Do you want to '''eventify'''  your life? To make it fuller and more exciting? Come travel with us.
+#To fill (something) with events; to make (something) more eventful.
+#:''Do you want to '''eventify''' your life? To make it fuller and more exciting? Come travel with us.''
+#:''You know I love you but our relationship is becoming a routine. I'm looking for some ways to '''eventify''' it.''
 
-* Let's think how we could '''eventify''' o ur next vacation. 
-
-*You know I love you but our relationship is becoming a routine. I'm looking for some ways to '''eventify'''  it.
-
-*It seems desirable to eventify one's life, but this might prove distracting or even destructive for life itself.
-
-Coined by M. N. Epstein [[http://www.emory.edu/INTELNET/Index.html]].
+====Synonyms====
+*[[enliven]], [[liven up]]
 
 [[Predictionary]] [[http://www.emory.edu/INTELNET/predictionary.html]]
 *See [[Neologisms:unstable]] for a topical listing or [[:Category:Protologism]] for an alphabetical listing.
-* e.g., [[hu]] (gender-neutral pronoun).
 
 {{protologism}} 
  [[Category:Protologism]]
